# triforce-rs

./: Cargo.toml  README.md
crates/triforce-engine/: Cargo.toml
crates/triforce-gl/: Cargo.toml  build.rs
crates/triforce-gl-generator/: Cargo.toml
crates/triforce-gl-generator/src/: lib.rs
crates/triforce-gl-generator/src/parser/: mod.rs
crates/triforce-gl-generator/src/registry/: mod.rs
crates/triforce-render/: Cargo.toml
crates/triforce-render/src/: lib.rs
crates/triforce-render/src/platform/: mod.rs
crates/triforce-render/src/platform/windows/: mod.rs  render.rs
crates/triforce-render/src/render/: mod.rs
crates/triforce-window/: Cargo.toml
crates/triforce-window/src/platform/windows/: window.rs
crates/triforce-window/src/window/: mod.rs
src/: main.rs
